centered app-frame and fixed some spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,14 @@
 
 body {
   background-color: var(--background-color);
-  padding: 1.5rem;
+}
+
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  min-height: 100vh;
 
   @media only screen and (max-width: 64em) {
     padding: 0.4rem;
@@ -22,10 +29,9 @@ body {
 }
 
 .app-frame {
-  max-width: 81rem;
-  min-height: 52rem;
-  height: 78vh;
-  margin: 0 auto;
+  width: 80rem;
+  height: 65rem;
+  min-height: 65rem;
   display: flex;
 
   @media only screen and (max-width: 64em) {
@@ -35,9 +41,10 @@ body {
 
 .pages {
   position: relative;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   border-radius: 0.95rem;
-  width: 100%;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
