--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,16 +4,15 @@ footer {
   width: 100%;
   background: #dbdbdbbb;
   border-top: 1px solid rgba(0, 0, 0, 0.144);
-  height: 4.5rem;
+  padding: 0.85rem;
   display: flex;
   justify-content: center;
-  align-items: center;
 
   a {
     display: flex;
     background: #dbdbdbbb;
-    height: 2.5rem;
-    width: 2.5rem;
+    height: 2.7rem;
+    width: 2.7rem;
     margin: 0 0.95rem;
     border-radius: 50%;
     align-items: center;
@@ -24,6 +23,7 @@ footer {
     transition: transform 0.1s;
 
     i {
+      margin-top: 0.1rem;
       font-size: 1.4rem;
       color: rgb(80, 80, 80);
       transition: transform 0.1s;
