--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -188,7 +188,7 @@
     height: 100%;
     position: absolute;
     left: 0.5rem;
-    top: 1rem;
+    top: 1.05rem;
     transition: 0.2s ease;
     z-index: 1;
   }
