--- a/src/Pages/About/About.scss
+++ b/src/Pages/About/About.scss
@@ -5,18 +5,17 @@
   justify-content: center;
   height: 100%;
   text-align: center;
-  padding: 1rem;
-  padding-top: 4rem;
+  padding: 5rem;
 
   @media only screen and (max-width: 38em) {
-    padding-top: 2rem;
+    padding: 3rem;
   }
 
   .about-container {
     max-width: 32rem;
 
     & > * {
-      margin-bottom: 0.8rem;
+      margin-bottom: 0.2rem;
 
       @media only screen and (max-width: 38em) {
         margin-bottom: 1rem;
@@ -60,6 +59,7 @@
     h3 {
       font-weight: 500;
       color: var(--font-color);
+      margin-bottom: 1.3rem;
     }
 
     p {
@@ -74,7 +74,7 @@
       text-decoration: none;
       padding: 0.5rem 1.6rem;
       color: white;
-      margin: 0.7rem 0.4rem;
+      margin: 1.4rem 0.4rem;
       background-color: var(--primary-color);
       box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
       border-radius: 0.25rem;
